{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 157,
  "lineage": "0b028f5a-cd90-c65c-0978-e843dbc0f020",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "aws-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-084945ef09dda0620",
            "id": "rtb-084945ef09dda0620",
            "owner_id": "206818435099",
            "propagating_vgws": [
              "vgw-0fa3539b5697d7957"
            ],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00cc5eebf288c48f8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-01b68b417f3c17a54"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.aws-vpc-igw",
            "aws_vpn_gateway.aws-vpn-gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "aws-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "172.16.0.100",
            "association_id": "eipassoc-0cffb856bb643b44c",
            "domain": "vpc",
            "id": "eipalloc-0db822dd014763d0b",
            "instance": "i-034369d877a028379",
            "network_interface": "eni-03804e77c9ce4a825",
            "private_dns": "ip-172-16-0-100.ec2.internal",
            "private_ip": "172.16.0.100",
            "public_dns": "ec2-52-2-167-152.compute-1.amazonaws.com",
            "public_ip": "52.2.167.152",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.aws-vpn-tunnel-test-vm",
            "aws_security_group.aws-allow-icmp",
            "aws_security_group.aws-allow-internet",
            "aws_security_group.aws-allow-ssh",
            "aws_security_group.aws-allow-vpn",
            "data.aws_ami.ubuntu",
            "google_compute_address.gcp-ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "aws-vpn-tunnel-test-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056db1277deef2218",
            "arn": "arn:aws:ec2:us-east-1:206818435099:instance/i-034369d877a028379",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-034369d877a028379",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "vm-ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03804e77c9ce4a825",
            "private_dns": "ip-172-16-0-100.ec2.internal",
            "private_ip": "172.16.0.100",
            "public_ip": "3.239.3.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e5c586784bd5a199",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a0d0ee7f81651bd9",
            "tags": {
              "Name_test_VM": "aws-vpn-tunnel-test-vm-us-east-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-019bac68d24f10a1b",
              "sg-030ff712e02f38181",
              "sg-082ed8916c40318c6",
              "sg-0b97235e0ad6eae89"
            ]
          },
          "dependencies": [
            "aws_security_group.aws-allow-icmp",
            "aws_security_group.aws-allow-internet",
            "aws_security_group.aws-allow-ssh",
            "aws_security_group.aws-allow-vpn",
            "data.aws_ami.ubuntu",
            "google_compute_address.gcp-ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aws-vpc-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-00cc5eebf288c48f8",
            "owner_id": "206818435099",
            "tags": {
              "Name": "aws-vpc-igw"
            },
            "vpc_id": "vpc-01b68b417f3c17a54"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws-allow-icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:206818435099:security-group/sg-0b97235e0ad6eae89",
            "description": "Allow icmp access from anywhere",
            "egress": [],
            "id": "sg-0b97235e0ad6eae89",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "aws-allow-icmp",
            "name_prefix": null,
            "owner_id": "206818435099",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-01b68b417f3c17a54"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws-allow-internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:206818435099:security-group/sg-082ed8916c40318c6",
            "description": "Allow http traffic from the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-082ed8916c40318c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "aws-allow-internet",
            "name_prefix": null,
            "owner_id": "206818435099",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-01b68b417f3c17a54"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws-allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:206818435099:security-group/sg-019bac68d24f10a1b",
            "description": "Allow ssh access from anywhere",
            "egress": [],
            "id": "sg-019bac68d24f10a1b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "aws-allow-ssh",
            "name_prefix": null,
            "owner_id": "206818435099",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-01b68b417f3c17a54"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws-allow-vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:206818435099:security-group/sg-030ff712e02f38181",
            "description": "Allow all traffic from vpn resources",
            "egress": [],
            "id": "sg-030ff712e02f38181",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.240.0.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "aws-allow-vpn",
            "name_prefix": null,
            "owner_id": "206818435099",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-01b68b417f3c17a54"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "gcp-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "104.198.110.137",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-03-19T07:37:56.038-07:00",
            "id": "projects/ackstorm-demo-project/regions/us-west1/addresses/gcp-vm-ip-us-west1",
            "name": "gcp-vm-ip-us-west1",
            "network_tier": "PREMIUM",
            "project": "ackstorm-demo-project",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ackstorm-demo-project/regions/us-west1/addresses/gcp-vm-ip-us-west1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "gcp-vpn-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.83.19.168",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-03-19T07:37:56.384-07:00",
            "id": "projects/ackstorm-demo-project/regions/us-west1/addresses/gcp-vpn-ip",
            "name": "gcp-vpn-ip",
            "network_tier": "PREMIUM",
            "project": "ackstorm-demo-project",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ackstorm-demo-project/regions/us-west1/addresses/gcp-vpn-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "gcp-allow-icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-03-19T07:38:18.149-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/ackstorm-demo-project/global/firewalls/gcp-network-gcp-allow-icmp",
            "name": "gcp-network-gcp-allow-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/ackstorm-demo-project/global/networks/gcp-network",
            "priority": 1000,
            "project": "ackstorm-demo-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ackstorm-demo-project/global/firewalls/gcp-network-gcp-allow-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.gcp-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "gcp-allow-internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-03-19T07:38:17.775-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/ackstorm-demo-project/global/firewalls/gcp-network-gcp-allow-internet",
            "name": "gcp-network-gcp-allow-internet",
            "network": "https://www.googleapis.com/compute/v1/projects/ackstorm-demo-project/global/networks/gcp-network",
            "priority": 1000,
            "project": "ackstorm-demo-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ackstorm-demo-project/global/firewalls/gcp-network-gcp-allow-internet",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.gcp-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "gcp-allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-03-19T07:38:18.375-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/ackstorm-demo-project/global/firewalls/gcp-network-gcp-allow-ssh",
            "name": "gcp-network-gcp-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/ackstorm-demo-project/global/networks/gcp-network",
            "priority": 1000,
            "project": "ackstorm-demo-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ackstorm-demo-project/global/firewalls/gcp-network-gcp-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.gcp-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "gcp-allow-vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2021-03-19T07:38:18.091-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/ackstorm-demo-project/global/firewalls/gcp-network-gcp-allow-vpn",
            "name": "gcp-network-gcp-allow-vpn",
            "network": "https://www.googleapis.com/compute/v1/projects/ackstorm-demo-project/global/networks/gcp-network",
            "priority": 1000,
            "project": "ackstorm-demo-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ackstorm-demo-project/global/firewalls/gcp-network-gcp-allow-vpn",
            "source_ranges": [
              "172.16.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.gcp-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "fr_esp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2021-03-19T07:38:30.860-07:00",
            "id": "projects/ackstorm-demo-project/regions/us-west1/forwardingRules/fr-esp",
            "ip_address": "34.83.19.168",
            "ip_protocol": "ESP",
            "load_balancing_scheme": "EXTERNAL",
            "name": "fr-esp",
            "network_tier": "PREMIUM",
            "project": "ackstorm-demo-project",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ackstorm-demo-project/regions/us-west1/forwardingRules/fr-esp",
            "target": "https://www.googleapis.com/compute/v1/projects/ackstorm-demo-project/regions/us-west1/targetVpnGateways/gcp-vpn-gw-us-west1"
          },
          "dependencies": [
            "google_compute_address.gcp-vpn-ip",
            "google_compute_network.gcp-network",
            "google_compute_vpn_gateway.gcp-vpn-gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "fr_udp4500",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2021-03-19T07:38:30.213-07:00",
            "id": "projects/ackstorm-demo-project/regions/us-west1/forwardingRules/fr-udp4500",
            "ip_address": "34.83.19.168",
            "ip_protocol": "UDP",
            "load_balancing_scheme": "EXTERNAL",
            "name": "fr-udp4500",
            "network_tier": "PREMIUM",
            "port_range": "4500-4500",
            "project": "ackstorm-demo-project",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ackstorm-demo-project/regions/us-west1/forwardingRules/fr-udp4500",
            "target": "https://www.googleapis.com/compute/v1/projects/ackstorm-demo-project/regions/us-west1/targetVpnGateways/gcp-vpn-gw-us-west1"
          },
          "dependencies": [
            "google_compute_address.gcp-vpn-ip",
            "google_compute_network.gcp-network",
            "google_compute_vpn_gateway.gcp-vpn-gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "fr_udp500",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2021-03-19T07:38:32.623-07:00",
            "id": "projects/ackstorm-demo-project/regions/us-west1/forwardingRules/fr-udp500",
            "ip_address": "34.83.19.168",
            "ip_protocol": "UDP",
            "load_balancing_scheme": "EXTERNAL",
            "name": "fr-udp500",
            "network_tier": "PREMIUM",
            "port_range": "500-500",
            "project": "ackstorm-demo-project",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ackstorm-demo-project/regions/us-west1/forwardingRules/fr-udp500",
            "target": "https://www.googleapis.com/compute/v1/projects/ackstorm-demo-project/regions/us-west1/targetVpnGateways/gcp-vpn-gw-us-west1"
          },
          "dependencies": [
            "google_compute_address.gcp-vpn-ip",
            "google_compute_network.gcp-network",
            "google_compute_vpn_gateway.gcp-vpn-gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "gcp-vpn-tunnel-test-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1604-xenial-v20210316",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/ackstorm-demo-project/zones/us-west1-a/disks/gcp-vpn-tunnel-test-vm-us-west1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/ackstorm-demo-project/zones/us-west1-a/instances/gcp-vpn-tunnel-test-vm-us-west1",
            "instance_id": "6670665473290996127",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-2",
            "metadata_fingerprint": "ubNmeoQDL0I=",
            "metadata_startup_script": "#!/bin/bash -xe\n\n# Copyright 2017 Google Inc.\n#\n# Licensed under the Apache License, Version 2.0 (the \"License\");\n# you may not use this file except in compliance with the License.\n# You may obtain a copy of the License at\n#\n#   http://www.apache.org/licenses/LICENSE-2.0\n#\n# Unless required by applicable law or agreed to in writing, software\n# distributed under the License is distributed on an \"AS IS\" BASIS,\n# WITHOUT WARRANTIES OR CONDITIO [...]
            "name": "gcp-vpn-tunnel-test-vm-us-west1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "104.198.110.137",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/ackstorm-demo-project/global/networks/gcp-network",
                "network_ip": "10.240.0.100",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/ackstorm-demo-project/regions/us-west1/subnetworks/gcp-subnet1",
                "subnetwork_project": "ackstorm-demo-project"
              }
            ],
            "project": "ackstorm-demo-project",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ackstorm-demo-project/zones/us-west1-a/instances/gcp-vpn-tunnel-test-vm-us-west1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-west1-a"
          },
          "dependencies": [
            "aws_eip.aws-ip",
            "aws_instance.aws-vpn-tunnel-test-vm",
            "aws_security_group.aws-allow-icmp",
            "aws_security_group.aws-allow-internet",
            "aws_security_group.aws-allow-ssh",
            "aws_security_group.aws-allow-vpn",
            "data.aws_ami.ubuntu",
            "data.google_compute_zones.available",
            "google_compute_address.gcp-ip",
            "google_compute_network.gcp-network",
            "google_compute_subnetwork.gcp-subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "gcp-network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/ackstorm-demo-project/global/networks/gcp-network",
            "name": "gcp-network",
            "project": "ackstorm-demo-project",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ackstorm-demo-project/global/networks/gcp-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "gcp-router1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 65000
              }
            ],
            "creation_timestamp": "2021-03-19T07:38:20.517-07:00",
            "id": "projects/ackstorm-demo-project/regions/us-west1/routers/gcp-router1",
            "name": "gcp-router1",
            "network": "https://www.googleapis.com/compute/v1/projects/ackstorm-demo-project/global/networks/gcp-network",
            "project": "ackstorm-demo-project",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ackstorm-demo-project/regions/us-west1/routers/gcp-router1"
          },
          "dependencies": [
            "aws_customer_gateway.aws-cgw",
            "google_compute_address.gcp-vpn-ip",
            "google_compute_network.gcp-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "gcp-router2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 65000
              }
            ],
            "creation_timestamp": "2021-03-19T07:38:20.883-07:00",
            "id": "projects/ackstorm-demo-project/regions/us-west1/routers/gcp-router2",
            "name": "gcp-router2",
            "network": "https://www.googleapis.com/compute/v1/projects/ackstorm-demo-project/global/networks/gcp-network",
            "project": "ackstorm-demo-project",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ackstorm-demo-project/regions/us-west1/routers/gcp-router2"
          },
          "dependencies": [
            "aws_customer_gateway.aws-cgw",
            "google_compute_address.gcp-vpn-ip",
            "google_compute_network.gcp-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "gcp-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-03-19T07:38:18.121-07:00",
            "gateway_address": "10.240.0.1",
            "id": "projects/ackstorm-demo-project/regions/us-west1/subnetworks/gcp-subnet1",
            "ip_cidr_range": "10.240.0.0/24",
            "name": "gcp-subnet1",
            "network": "https://www.googleapis.com/compute/v1/projects/ackstorm-demo-project/global/networks/gcp-network",
            "private_ip_google_access": false,
            "project": "ackstorm-demo-project",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ackstorm-demo-project/regions/us-west1/subnetworks/gcp-subnet1"
          },
          "dependencies": [
            "google_compute_network.gcp-network"
          ]
        }
      ]
    }
  ]
}